--- a/about.html
+++ b/about.html
@@ -28,7 +28,7 @@
             <h2>About Me</h2>
             <h5>Developer <span>& Designer</span></h5>
             <p>I specialize in frontend development using HTML and CSS. My expertise lies in crafting visually appealing and user-friendly web interfaces through the seamless integration of these core technologies. I excel in creating responsive layouts, optimizing website performance, and ensuring cross-browser compatibility. My focus on frontend design and development allows me to deliver engaging and aesthetically pleasing websites that effectively convey your message and captivate your audience.</p>
-            <a class="button3" href="https://www.linkedin.com/in/abdirashid-haji-338723244">Let's Talk</a>
+            <a class="button3" href="+254742822463">Let's Talk</a>
           </div>
         </div>
     </section>
